Support jOOQ-codegen 3.12